--- a/app/views/public/pages/_filtres_categorie.html.erb
+++ b/app/views/public/pages/_filtres_categorie.html.erb
@@ -5,13 +5,28 @@
     </div>
 
     <div class="d-flex flex-wrap gap-1">
-        <%= button_to "Toutes", update_filters_path, 
+        <%= button_to "Toutes", 
+                update_filters_path(
+                    slug: nil, 
+                    id: nil,
+                    taille: params[:taille], 
+                    couleur: params[:couleur],
+                    prixmax: params[:prixmax],
+                    type: params[:type]
+                ), 
             class: link_badge_categorie_class(nil) %>
 
         <% @toutes_categories.each do |categorie| %>
             <%= button_to categorie.nom, 
-                update_filters_path(slug: categorie.nom.parameterize, id: categorie.id),
-                class: link_badge_categorie_class(categorie.id) %>
+                    update_filters_path(
+                        slug: categorie.nom.parameterize, 
+                        id: categorie.id,
+                        taille: params[:taille], 
+                        couleur: params[:couleur],
+                        prixmax: params[:prixmax],
+                        type: params[:type]
+                    ),
+                    class: link_badge_categorie_class(categorie.id) %>
     
         <% end %>
 
