--- a/app/views/public/pages/_filtres_type.html.erb
+++ b/app/views/public/pages/_filtres_type.html.erb
@@ -5,14 +5,26 @@
     </div>
 
     <div class="d-flex flex-wrap gap-1">
-        <%= button_to "Tous", update_filters_path, class: link_badge_type_class(nil) %>
+        <%= button_to "Tous", 
+        update_filters_path(
+            slug: params[:slug], 
+            id: params[:id], 
+            taille: params[:taille], 
+            couleur: params[:couleur],
+            prixmax: params[:prixmax],
+            type: nil
+        ), 
+            class: link_badge_type_class(nil) %>
 
         <% @types.each do |type| %>
-            <%= button_to type, update_filters_path(
-                slug: params[:slug], id: params[:id], 
-                taille: params[:taille], couleur: params[:couleur],
-                prixmax: params[:prixmax],
-                type: type,
+            <%= button_to type, 
+                update_filters_path(
+                        slug: params[:slug], 
+                        id: params[:id], 
+                        taille: params[:taille], 
+                        couleur: params[:couleur],
+                        prixmax: params[:prixmax],
+                        type: type
                 ),
                 class: link_badge_type_class(type) %>
         <% end %>
