--- a/app/views/admin/produits/_produit.html.erb
+++ b/app/views/admin/produits/_produit.html.erb
@@ -40,7 +40,7 @@
 
                 <%= badge_eshop(produit) %>
 
-                <% unless controller_name="selection_produit" %>
+                <% unless controller_name == "selection_produit" %>
                   <% statut = statut_disponibilite(produit, Date.today.to_date, Date.today.to_date) %>
                   <% disponibles = statut[:disponibles] %>
                   <p class="m-1 mt-3">
