check if same produit existe

--- a/app/views/admin/produits/new.html.erb
+++ b/app/views/admin/produits/new.html.erb
@@ -1,4 +1,4 @@
-<%= bandeau_entete_simple("Nouveau produit", "shirt") %>
+<%= bandeau_entete_simple("Nouveau produit", "person-standing-dress") %>
 
 <%= render "form", produit: @produit %>
 
