--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -18,7 +18,9 @@
     <%= render "admin/shared/gtag" %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
+    <%#= javascript_importmap_tags %>
+    <%= javascript_link_tag "application", "data-turbo-track": "reload" %>
+
   </head>
 
   <body class="pb-4">
