etiquette image contain

--- a/app/views/admin/etiquettes/_produit_document.html.erb
+++ b/app/views/admin/etiquettes/_produit_document.html.erb
@@ -3,7 +3,7 @@
     <tr>
         <td colspan="2" style="height: 420px; 
             background-image: url('<%= produit.image1.present? ? produit.image1.url : no_photo_url %>'); 
-            background-size: cover; background-repeat: no-repeat; background-position: center;">
+            background-size: contain; background-repeat: no-repeat; background-position: center;">
 
         </td>
     </tr>
