display debug on ensemble

--- a/app/views/admin/selection_produit/_ensemble_applicable.html.erb
+++ b/app/views/admin/selection_produit/_ensemble_applicable.html.erb
@@ -22,6 +22,8 @@
       <%= form_with url: toggle_transformer_ensemble_admin_selection_produit_index_path, method: :post, local: true do %>
         <%= hidden_field_tag :ensemble_id, result[:ensemble].id %>
 
+        <%= result.inspect %>
+
         <%= submit_tag "Transformer en ensemble", 
             class: "btn btn-primary my-2 w-100 fw-bold",
             data: { confirm: "Certain(e) de transformer les articles en ensemble ?" } %>
