--- a/app/views/admin/selection_produit/_ensemble_applicable.html.erb
+++ b/app/views/admin/selection_produit/_ensemble_applicable.html.erb
@@ -21,15 +21,10 @@
 
       <%= form_with url: toggle_transformer_ensemble_admin_selection_produit_index_path, method: :post, local: true do %>
         <%= hidden_field_tag :ensemble_id, result[:ensemble].id %>
-
-
-        <hr>
-        matching_reffrs_count: <%= result[:matching_reffrs_count] %> <br>
-        ref frs dans ensemble: <%= result[:ensemble].produit.reffrs %> <br>
-        ref frs dans articles: <%= @commande.articles.includes(:produit).map { |a| a.produit&.reffrs } %><br>
- 
-
-        <hr>
+        
+        <%# matching_reffrs_count: <%= result[:matching_reffrs_count] %> 
+        <%# ref frs dans ensemble: <%= result[:ensemble].produit.reffrs %> 
+        <%# ref frs dans articles: <%= @commande.articles.includes(:produit).map { |a| a.produit&.reffrs } %>
 
         <%= submit_tag "Transformer en ensemble", 
             class: "btn btn-primary my-2 w-100 fw-bold",
