--- a/app/views/admin/shared/doc_footer.html.erb
+++ b/app/views/admin/shared/doc_footer.html.erb
@@ -4,6 +4,7 @@
 </head>
 
 <div style="width: 900px; display: inline-block; text-align: center;">
-      <strong> SARL AUTOUR D'UN SOIR </strong> - 27, 29 Boulevard Carnot 06400 CANNES <br>
-      04 93 45 17 17 | contact@a1soir.com
+  <strong> SARL AUTOUR D'UN SOIR </strong> - 27, 29 Boulevard Carnot 06400 CANNES <br>
+  SIRET : 8805591414 – APE:4771Z – TVA: FR42880559414 <br>
+  04 93 45 17 17 | contact@a1soir.com
 </div>
